# 211_331_Skrypnik

./: .gitignore  CMakeLists.txt  README.md  generate_transactions.py  mainwindow.cpp  mainwindow.h  transactions.csv  transactions_invalid.csv
